<?xml version="1.0" encoding="utf-8"?>
<!--
* Programmer: Lee Hasper
* Class ID: lhaspe0925
* Lab 2
* CIS 2610: Business Mobile Programming
* Spring 2016
* Due date: 03/01/2016
* Date completed: 02/20/2016
*************************************
* Program Explanation
* This is a prototype shopping application for a Mobile device accessory wholesaler.
* It allows a buyer to tap on an item they would like to purchase, input the quantity to buy,
* and submit the order.
* If the order has an quantity error, the user immediately sees a toast Error message indicating what went wrong.
* Their quantity input is also deleted to further convey the need to input a proper quantity.
 * Once the proper quantity is input a pre-programmed text view displays a completed order message.
 * This message includes the name of the product, the quantity ordered, and subtotal for the purchase.
 * If the buyer decides to purchase another item, the order message is cleared from the screen.
 * The user now has a fresh canvas in which to begin a new purchase.
*************************************
VARIABLE DECLARATION
TextView txtPhoneRepairWholesale Displays a welcome message.
Radio Group rdoGroupChargers contains 4 radio buttons, 1 edit text box, 1 text view, 1 button.
Radio Button rdoBtnLightning6 6' Lightning charging cable
Radio Button rdoBtnLightning3 3' Lightning charging cable
Radio Button rdoBtnMicro6 6' Micro USB charging cable
Radio Button rdoBtnMicro3 3'Micro USB charging cable
Text View txtOrderCost Displays completed order message
Edit Text txtbxInputQuantity Allows user to input quantity desired.
Button btnChkOut Allows the user to submit their order.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="wmich.edu.lab2lhaspe0925.MainActivity"
    android:background="#ae9f9f">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtPhoneWholesaleTitle"
        android:id="@+id/txtPhoneRepairWholesale"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rdoGroupChargers"
        android:touchscreenBlocksFocus="false"
        android:clickable="true"
        android:baselineAligned="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60sp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdobtntxtILightning"
            android:id="@+id/rdobtnLightning6"
            android:checked="true"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdobtnLightning3"
            android:id="@+id/rdobtnLightning3"
            android:checked="false"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdobtnMicro3"
            android:id="@+id/rdobtnMicro3"
            android:checked="false"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdobtnMicroUsb3"
            android:id="@+id/rdobtnMicro6"
            android:checked="false"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtQuantityDesired"
            android:id="@+id/QtyTextHeader"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30sp"
            android:textStyle="bold"
            android:theme="@style/Base.ThemeOverlay.AppCompat"
            android:textColor="#080808" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtBxInputQty"
            android:layout_gravity="center_horizontal"
            android:editable="true"
            android:inputType="number"
            android:maxLength="@integer/abc_max_action_buttons"
            android:numeric="integer"
            android:textAlignment="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCheckOut"
            android:id="@+id/btnChkOut"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/btnCheckOut"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:clickable="true"
            android:background="#b41010"
            android:visibility="visible"
            android:ellipsize="marquee" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/txtOrderCost"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/PriceMessage"
            android:enabled="true"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#060606" />
    </RadioGroup>
</RelativeLayout>
